#	$Id$	

Changelog for HylaFAX 4.2.0

* prevent CID values from acquiring data when unset (1 Jun 2004)
* add ModemReadyCmds config option (1 Jun 2004)
* improve and fix several no-modem-response timeouts (31 May 2004)
* fix an error in faxq when adding a job that had a no_formatter
  error to the sleep queue (31 May 2004)
* fix rare faxsend segfault in Class 1 scanline padding (27 May 2004)
* utilize DesiredBR to determine what modulation to use (24 May 2004)
* remove Class1EnableV34Cmd from modem initialization (22 May 2004)
* avoid V.29-to-V.17 fallback transitions (22 May 2004)
* fix send V.34-Fax cases where receiver reports no ECM (21 May 2004)
* add prototype support for Perle/MultiTech-SMI modems (21 May 2004)
* fix segfault with Class2RTFCC (21 May 2004)
* add V.34-Fax disconnection recognition during prologue (20 May 2004)
* add prototype support for Mainpine RockForceDUO+ (19, 21 May 2004)
* improve V.34-Fax session abortion handling (19 May 2004)
* add more prototype support for Courier V.Everything modems (19 May 2004)
* add '-l bindaddr' option to hfaxd (8 May 2004)
* fix build for 64-bit Linux (8 May 2004)
* fix error in clients when sender identity was whitespace only (8 May 2004)
* add recognition of blacklisted modem dialing responses (8 May 2004)
* impose a timeout on sending some commands to Class 2 modems (5 May 2004)
* improve COMMLOGS assignment in default archive script (04 May 2004)
* add prototype support for AboCom and another MultiTech (29 Apr 2004)
* fix faxaddmodem and probemodem to support locking devices
  in subdirectories (29 Apr 2004)
* extend timeout waiting for first flag in ECM synchronization (29 Apr 2004)
* fix frame-count indicator in PPS signal (28 Apr 2004)
* add PAM support to hfaxd (27 Apr 2004)
* handle repeated PPS, DCS, or EOR signals in V.34-Fax (26 Apr 2004)
* attempt to handle CTC signals from broken senders (26 Apr 2004)
* improved pagermap backreference error handling (22 Apr 2004)