@@ -166,6 +166,15 @@ where
 is of the form ``MM/DD/YY HH:MM'' (the
 .IR date (1)
 format string %D %H:%M).
+.TP 12
+.BI \-end " time"
+Show information only for the facsimile transmitted before the
+specified
+.IR time ;
+where
+.I time
+is of the same form as
+.B since.
 .TP
 .B \-speed
 Sort output by the signalling rate.
