@@ -2,6 +2,8 @@
 
 Changelog for HylaFAX 4.2.0
 
+* add -end option for xferfaxstats and recvstats (17 Jun 2004)
+* add DynamicLocalID config option (17 Jun 2004)
 * prevent CID values from acquiring data when unset (1 Jun 2004)
 * add ModemReadyCmds config option (1 Jun 2004)
 * improve and fix several no-modem-response timeouts (31 May 2004)
